# ComfyUI-MimicMotion

./: .gitignore  README.md  README.zh.md  __init__.py  node_zh.py  nodes.py  pyproject.toml  requirements.txt
doc/: mimicmotion_workflow.json
mimicmotion/dwpose/: dwpose_detector.py  preprocess.py
mimicmotion/utils/: loader.py
web/js/: previewVideo.js  uploadVideo.js
